prod.tf
provider "aws" {
  profile = "terraform"
  region  = "me-central-1"
}

resource "aws_s3_bucket" "prod_tf_course" {
  bucket = "test-tf-course-20220916"
  acl    = "private"
}

resource "aws_default_vpc" "default" {}

resource "aws_security_group" "prod_web" {
  name        = "prod_web"
  description = "Allow standard http/s ports inbound  and everything outbound"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Terraform" = "true"
  }
}

resource "aws_instance" "prod_web" {
  ami                    = "ami-03ccfaecad4b0f79e"
  instance_type          = "t3.micro"
  vpc_security_group_ids = [aws_security_group.prod_web.id]

  tags = {
    "Terraform" = "true"
  }
}

resource "aws_eip" "prod_web" {
  instance = aws_instance.prod_web.id
  tags = {
    "Terraform" = "true"
  }
}
